--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Evacool</string>
+    <string name="app_name">myCOOLMAN RECREATIONAL</string>
     <string name="filekey"> </string>
     <string name="MACkey">mackey</string>
     <string name="serviceKey">servicekey</string>
